--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
+{% load custom_filters %}
 
 {% block title %}Contact Us - {{ site_config.college_name }}{% endblock %}
 
 {% block content %}
 <!-- Header -->
-<div class="bg-gray-900 py-16 text-white text-center">
+<div class="bg-mbman-blue py-16 text-white text-center">
     <div class="container mx-auto px-4">
         <h4 class="text-mbman-gold font-bold uppercase tracking-wider mb-3">Get in Touch</h4>
         <h1 class="text-4xl font-bold mb-4">Contact Us</h1>
