--- a/templates/base.html
+++ b/templates/base.html
@@ -10,25 +10,7 @@
     <link rel="icon" type="image/x-icon" href="{{ site_logo.logo.url }}">
     <link rel="apple-touch-icon" href="{{ site_logo.logo.url }}">
     {% endif %}
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        mbman: {
-                            blue: '#06437a',
-                            gold: '#d97706',
-                            light: '#f3f4f6',
-                        }
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    }
-                }
-            }
-        }
-    </script>
+    <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
