fix: Fix the site heading to be dynamic

--- a/templates/home/events.html
+++ b/templates/home/events.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Events - Sagarmatha Ordinary School{% endblock %}
+{% block title %}Events - {{ site_config.college_name|default:"MBMAN" }}{% endblock %}
 
 {% block content %}
 <!-- Page Header -->
