--- a/templates/home/notices.html
+++ b/templates/home/notices.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load custom_filters %}
 
-{% block title %}Notices - Sagarmatha Ordinary School{% endblock %}
+{% block title %}Notices - {{ site_config.college_name|default:"MBMAN" }}{% endblock %}
 
 {% block content %}
 <!-- Page Header -->
